Some changes made to the home page

--- a/home.html
+++ b/home.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This Is The Home Page</h1>
     <p>You'll Always Start From Here Anytime You Visit Our Site</p>
+    <p>Don't hesitate to get in touch with us</p>
 </body>
 </html>
